# xipe

./: Cargo.toml  Containerfile  Dockerfile  Mockerfile.yaml  README.md  aio.Dockerfile  build.sh  build_cl.sh  build_podman.sh  cl copy 2.yaml  cl copy.yaml  cl.yaml  disks_i_guess.sh  os.json  os.yml  podman_in_podman.sh  schema.json  shebang.py  syntax.json  todo.txt  version.json  xipe.py
.devcontainer/: Dockerfile  devcontainer.json
repo/com/azure/ml/: aio.yml
repo/com/docker/: get.yml  index.yml
repo/com/nvidia/: container-toolkit.yml
repo/com/nvidia/cuda/: data.yml  index copy.yml  index.go.yml  index.yml  o.yml  tags.json  tags.yml
repo/com/ubuntu/: focal.yml  hirsute.yml  impish.yml  index.yml  jammy.yml
repo/io/podman/: index.yml
repo/org/jupyter/: lab.yml  notebook.yml
repo/org/python/: 3-pip.yml  3.yml
repo/org/python/v3/: index.yml  pip.yml
repo/org/pytorch/v1/: cpu.yml  cu102.yml  cu113.yml  index.yml
repo/org/scikit-learn/: v1.yml
repo/org/tensorflow/: nightly.yml  v2.yml
repo/org/tensorflow/v1/: cpu.yml  gpu.yml
scripts/: check_utils.sh  clean_pycache.py  dive.sh  dont_write_bytecode.py  os_info.sh  podman_install.sh  test_cuda.sh
src/: ast.rs  exec.rs  main.rs  stack.rs  store_as.rs
src/step/: addon.rs  apt.rs  block.rs  comment.rs  download.rs  if.rs  mod.rs  pip.rs  run.rs  user.rs
test/: repo.json
test/images/: azureml-interactive-host.json  basic.json
test/stack/: docker-engine.json  docker.json  ml-basic.json  nvidia-container-toolkit.json
test/stack/microsoft/tensorflow/: full.yml
(+12 files in other folders)
