[package]
name = "xipe"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8"
#serde_json = { version = "1.0", features = ["or"] }
serde = { version = "1.0", features = ["derive"] }
dockerfile = "0.2"
shlex = "1"

semver ="1"
enum_dispatch = "0.3"
thiserror = "1"
anyhow = "1"

reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }